--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 flask==2.3.3
 flask-socketio==5.3.4
 python-socketio==5.9.0
-eventlet==0.33.3
 gunicorn==21.2.0
 setuptools==69.0.3
+gevent==23.9.1
+gevent_websocket==0.10.1
