--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 flask==2.3.3
-flask-socketio==5.3.7
+flask-socketio==5.3.4
 python-socketio==5.9.0
 gunicorn==21.2.0
+gevent==23.9.1
+gevent-websocket==0.10.1
 setuptools==69.0.3
-gevent==24.11.1
-gevent_websocket==0.10.1
 pytz==2024.1
